k8s/pagamento/pagamento-service.yaml
# Service ClusterIP para Pagamento (uso via ALB Ingress)
apiVersion: v1
kind: Service
metadata:
  name: pagamento-service
  labels:
    app: pagamento
    component: service
spec:
  type: ClusterIP                   # Tipo ClusterIP para uso interno (ALB via Ingress)
  selector:
    app: pagamento                  # Conecta com Pods que têm label app=pagamento
  ports:
    - name: http
      port: 8081                      # Porta interna do Service
      targetPort: 8081                # Porta do container
      protocol: TCP
