k8s/pagamento/pagamento-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pagamento-ingress
  namespace: lanchonete
  labels:
    app: pagamento
    component: ingress
    managed-by: terraform
  annotations:
    # AWS Load Balancer Controller
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    
    # Health Check
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    
    # Configurações de Load Balancer
    alb.ingress.kubernetes.io/load-balancer-name: "lanchonete-pagamento-alb"
    alb.ingress.kubernetes.io/group.name: "lanchonete"
    
    # Tags para o ALB
    alb.ingress.kubernetes.io/tags: "Projeto=lanchonete,Terraform=true,Servico=pagamento"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pagamento-service
            port:
              number: 8081
